<resources>
    <string name="app_name">Dynamic View App</string>
    <string name="experince">Experince</string>
    <string name="job_profile">Job Profile</string>
    <string name="submit">Submit</string>
    <string name="remove">Remove</string>
    <string name="add">Add</string>
    <string name="add_experience">Add Experience</string>
    <string name="full_name">Full Name</string>
    <string name="dynamic_form">Dynamic Form</string>
</resources>