<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/dynamic_form"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:layout_marginBottom="20dp"/>



                <EditText
                    android:id="@+id/etname"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:padding="10dp"
                    android:background="@drawable/round_grey"
                    android:layout_marginBottom="15dp"
                    android:ems="10"
                    android:hint="@string/full_name"
                    android:inputType="textPersonName" />



            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"

                android:background="@drawable/round_grey"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <Spinner
                android:id="@+id/spinnereducation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                    />
            </FrameLayout>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="10dp"
                android:text="@string/add_experience"
                android:textColor="@color/black"
                android:textSize="30sp" />

            <LinearLayout
                android:id="@+id/layout_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"

                >

                <Button
                    android:id="@+id/btnadd"
                    android:background="@drawable/round_primary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"

                    android:text="@string/add" />

                <Button
                    android:id="@+id/btnremove"
                    android:background="@drawable/round_primary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"

                    android:layout_weight="1"
                    android:text="@string/remove" />

            </LinearLayout>
            <Button
                android:id="@+id/btnsubmit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/round_primary"
                android:text="@string/submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>

